syntax = "proto3";

package dote.proto.api.action;

import "api/person.proto";
import "api/common.proto";

message GetLoggedInPersonRequest {
  bool get_details = 1;
}

message GetLoggedInPersonResponse {
  api.Person person = 1;
  api.ResponseStatus status = 2;
}
